# AUT700-MePo

./: .gitignore  LICENSE  README.md
exec1/: CMakeLists.txt  package.xml
exec1/scripts/: Exercise_2_EKF.py  Exercise_2_MC.py  node.py
turtle_bot_controller/: CMakeLists.txt  package.xml
turtle_bot_controller/scripts/: dosquarepath.py  gotopoint.py  gotopose.py
