<?xml version="1.0"?>
<package format="2">
  <name>turtle_bot_controller</name>
  <version>0.0.0</version>
  <description>
    The turtle_bot_controller package for AUT-700 course exercise 3 
    at the Tampere University
  </description>

  <maintainer email="jani.asikainen@tuni.fi">jani asikainen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
</package>
